cppcheck_report.txt
3_Implementation/.vscode/src/gamecd.c:28:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
3_Implementation/.vscode/src/gamecd.c:57:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
3_Implementation/.vscode/src/gamecd.c:86:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
3_Implementation/.vscode/src/gamecd.c:115:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
3_Implementation/.vscode/src/gamecd.c:144:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
3_Implementation/.vscode/src/gamecd.c:173:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
3_Implementation/.vscode/src/gamecd.c:202:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
3_Implementation/.vscode/src/gamecd.c:231:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
3_Implementation/.vscode/src/gamecd.c:260:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
3_Implementation/.vscode/src/gamecd.c:50:22: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
                count--;
                     ^
3_Implementation/.vscode/src/gamecd.c:79:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
3_Implementation/.vscode/src/gamecd.c:108:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
3_Implementation/.vscode/src/gamecd.c:137:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
3_Implementation/.vscode/src/gamecd.c:166:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
3_Implementation/.vscode/src/gamecd.c:195:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
3_Implementation/.vscode/src/gamecd.c:224:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
3_Implementation/.vscode/src/gamecd.c:253:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
3_Implementation/.vscode/src/gamecd.c:282:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
3_Implementation/.vscode/unity/unity_internals.h:1055:0: error: The code contains unhandled character(s) (character code=194). Neither unicode nor extended ascii is supported. [preprocessorErrorDirective]
© 2021 GitHub, Inc.
^
3_Implementation/.vscode/test/test_fun.c:5:0: style: The function 'test_menu' is never used. [unusedFunction]

^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingInclude]

